--- a/scss/forms/contact/_contact-m.scss
+++ b/scss/forms/contact/_contact-m.scss
@@ -68,6 +68,10 @@
     }
   }
 
+  fieldset {
+    width: 100%;
+  }
+
   .field-budget, .field-budget-for-party {
     width: 30%;
     margin-top: 2.1%;
