--- a/scss/forms/contact/_contact-s.scss
+++ b/scss/forms/contact/_contact-s.scss
@@ -65,6 +65,10 @@
     }
   }
 
+  fieldset {
+    width: 100%;
+  }
+
   .field-budget, .field-budget-for-party {
     width: 95%;
     margin-top: 2.1%;
