--- a/theme/css/styles.css
+++ b/theme/css/styles.css
@@ -2849,6 +2849,9 @@ html[dir="rtl"] .select2-container-multi .select2-search-choice-close {
   .b-cols .field-captcha.field-item div a, .b-cols .field-captcha.field-item div label {
     font-size: 9px;
   }
+  .b-cols.style-a .col-wrapper {
+    padding: 25px 10px 0 10px;
+  }
 
   .text-img-wrapper {
     padding-top: 20px;
